# Verification-Platform-Next

./: .claudeignore  .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: README.md  settings.json
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: refactoring.yml
.github/workflows/: action.yaml  ci.yml  deploy-cloud-run.yml
.idx/: dev.nix
apps/gradio/: pyproject.toml
apps/gradio/src/verification_app/: __init__.py  app.py  form_app.py  form_model.py  graphs.py  services.py
deploy/: cloudrun.service.yaml
docs/: ARCHITECTURE.md  Gitブランチ戦略_VersionUp.md  Gitブランチ戦略_開発時.md  MIGRATION.md  REFACTORING.md  _config.yml  index.md  システム関連図.md  ステークホルダーマップ.md  ブランチ戦略_建研VerUp追従フロー.md  プロセスモデル_消費電力計算_標準.md  最低風量_最低電力_直接入力.md  計算フロー_タイプ1・2.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
notebooks/: README.md  Verification_Platform_Next.ipynb
notebooks/legacy/: Verification_Platform_260715_Gradio.ipynb
regression/phase5/: README.md  manifest.json
scripts/: run_phase5_regression.py  setup-codex-cloud.sh
src/docs/: C4_システムコンテキスト図.md  ステークホルダーマップ.md  ブランチ戦略_カスタム機能追加フロー.md  プロセスモデル_消費電力計算_標準.md
src/jjjexperiment/: constants.py  main.py  section4_2.py  section4_2_a.py
src/jjjexperiment/ac_min_volume_input/: __init__.py  section4_2.py
src/jjjexperiment/carryover_heat/: section4_2.py
src/jjjexperiment/inputs/: climate_service.py  common.py  cooling.py  di_container.py  heating.py  house_service.py
src/jjjexperiment/latent_load/: section4_2_a.py
src/jjjexperiment/underfloor_ac/: section3_1_e.py  section4_2.py  section4_2_f46_f48.py  section4_2_f52.py
src/jjjexperiment/v_min_input/: logic.py  section4_2.py  section4_2_a.py
src/jjjexperiment/v_supply_cap/: cap_V_supply_d_t_i.py
src/pyhees/: section3_1_e.py  section4_2.py  section4_2_a.py
src/test_utils/: input_sample_type2.json  input_sample_type4.json
src/tests/: test_integration_execution.py  test_not_broken_type2.py
src/tests/carryover_heat/: test_4_2_formula_46_48.py
src/tests/latent_load/: test_heating_cooling_load_f_1_2.py
src/tests/underfloor_ac/: test_4_2.py  test_4_2_f40.py  test_4_2_f46_f48.py  test_4_2_f52.py  test_4_2_f8.py
src/tests/v_min_input/: test_fan_power_traditional.py  test_fan_power_v_min.py  test_solve_cubic_system.py  (+2 more)
tests/: test_artifact_paths.py  test_calculation_service.py  test_colab_notebook.py  test_declarative_builder.py  test_declarative_parity.py  test_engine_boundary.py  test_engine_module_contract.py  test_engine_runtime_adapter.py  test_form_model.py  test_gradio_app.py  test_input_bindings.py  test_legacy_builder.py  test_legacy_inventory.py  test_phase5_regression.py  test_predicates.py  test_result_graphs.py  test_runtime_state_boundaries.py  test_schema.py  test_schema_loader.py  test_section4_2_phase_orchestration.py  test_section4_2_preparation.py
(+6 files in other folders)
