[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "verification-platform-app"
version = "0.1.0"
description = "Gradio application for Verification Platform"
authors = ["iguchi-lab"]
packages = [{ include = "verification_app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12.11,<3.13"
gradio = ">=6,<7"
verification-core = { path = "../../packages/verification-core", develop = true }
pyhees-jjj = { git = "https://github.com/iguchi-lab/pyhees-jjj.git", rev = "0f91ba8381df1b4960557b92b39339385cc9009f" }

[tool.poetry.scripts]
verification-platform = "verification_app.form_app:main"
