[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "verification-platform-app"
version = "0.1.0"
description = "Gradio application for Verification Platform"
authors = ["iguchi-lab"]
packages = [{ include = "verification_app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12.11,<3.13"
gradio = ">=6,<7"
matplotlib = ">=3.9,<4"
matplotlib-fontja = ">=1.1,<2"
verification-core = { path = "../../packages/verification-core", develop = true }
pyhees-jjj = { path = "../../packages/pyhees-jjj", develop = true }

[tool.poetry.scripts]
verification-platform = "verification_app.form_app:main"
